--- a/style.css
+++ b/style.css
@@ -21,14 +21,20 @@ html {
 }
 
 .card__photo {
+   
     height: 100vh;
-    width: 211px;
+    width: 212px;
 }
 
 .card__photo-img {
     position: relative;
     top: 32px;
     left: 32px;
+    height:148px;
+    width:148px;
+    border-radius:90px ;
+    border:solid black;
+
 }
 
 .card__details {
@@ -57,8 +63,11 @@ html {
 }
 
 .card__description {
+    
+    right:32px;
     margin: 0px;
     max-width: 380px;
+    text-align:justify;
 }
 
 .card__social {
@@ -68,10 +77,13 @@ html {
 }
 
 .card__social a {
-    color: red;
+    color:#E20613;
 }
 
 .card__social a:hover {
     color: rgb(112, 7, 107);
     text-shadow: 0px 0px 3px white;
+}
+a{
+    color:#ED6D05;
 }
