--- a/style.css
+++ b/style.css
@@ -27,6 +27,10 @@ html {
 }
 
 .card__photo-img {
+    background-image: url(tomek1.jpg);
+    background-repeat: repeat-y;
+    background-size: contain;
+    background-position: center;
     position: relative;
     top: 32px;
     left: 32px;
@@ -63,15 +67,15 @@ html {
 }
 
 .card__description {
-    
     right:32px;
     margin: 0px;
     max-width: 380px;
     text-align:justify;
+    line-height: 22px;
 }
 
 .card__social {
-    margin-top: 10px;
+    margin-top: 16px;
     max-width: 380px;
     font-size: 16px;
 }
@@ -84,6 +88,7 @@ html {
     color: rgb(112, 7, 107);
     text-shadow: 0px 0px 3px white;
 }
-a{
+.strong{
     color:#ED6D05;
+    font-weight: normal;
 }
