--- a/style.css
+++ b/style.css
@@ -27,10 +27,6 @@ html {
 }
 
 .card__photo-img {
-    background-image: url(tomek1.jpg);
-    background-repeat: repeat-y;
-    background-size: contain;
-    background-position: center;
     position: relative;
     top: 32px;
     left: 32px;
@@ -48,7 +44,7 @@ html {
     justify-content: space-between;
 }
 
-.card__top {
+.card__main {
     margin: 16px 0;
     left: 212px;
     top: 32px;
@@ -56,7 +52,7 @@ html {
 }
 
 .card__top-header {
-    margin: 0px;
+    margin:0px;
     font-size: 36px;
 }
 
@@ -64,18 +60,18 @@ html {
     font-style: italic;
     font-weight: normal;
     margin: 0px;
+   
 }
 
 .card__description {
-    right:32px;
-    margin: 0px;
+    margin: 10px 0px;
+    padding-right:10px;
     max-width: 380px;
     text-align:justify;
     line-height: 22px;
 }
 
 .card__social {
-    margin-top: 16px;
     max-width: 380px;
     font-size: 16px;
 }
